# ChangeLog for app-emulation/docker
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/ChangeLog,v 1.55 2015/07/24 18:48:39 xarthisius Exp $

*docker-1.7.1 (24 Jul 2015)

  24 Jul 2015; Kacper Kowalik <xarthisius@gentoo.org> +docker-1.7.1.ebuild,
  -docker-1.7.0-r1.ebuild, -docker-1.7.0.ebuild:
  Version bump, grabbed from tianon's docker overlay. Fixes #554306. Drop old

*docker-1.7.0-r1 (07 Jul 2015)

  07 Jul 2015; William Hubbs <williamh@gentoo.org> +docker-1.7.0-r1.ebuild:
  add slot dependency on dev-lang/go, approved by all maintainers

  05 Jul 2015; Manuel Rüger <mrueg@gentoo.org> docker-1.6.2.ebuild,
  docker-1.7.0.ebuild:
  [QA] Install zsh-completion unconditionally.

*docker-1.7.0 (04 Jul 2015)

  04 Jul 2015; Alex Brandt <alunduil@gentoo.org> +docker-1.7.0.ebuild,
  files/docker-r2.confd, files/docker.initd, metadata.xml:
  add version 1.7.0  * from tianon's docker-overlay * fixes bug #553708

*docker-1.6.2 (04 Jul 2015)

  04 Jul 2015; Alex Brandt <alunduil@gentoo.org> +docker-1.6.2.ebuild,
  +files/7179-add-audit_write-cap.patch, +files/docker-r3.confd,
  +files/docker-r3.initd, +files/docker.initd, files/docker-r2.confd,
  files/docker-r2.initd, files/docker.service:
  add version 1.6.2  fixes bug #553706

  04 Jul 2015; Alex Brandt <alunduil@gentoo.org> metadata.xml:
  add alunduil to maintainers

  30 Jun 2015; Manuel Rüger <mrueg@gentoo.org> docker-1.6.1.ebuild:
  Install zsh-completions unconditionally.

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> docker-1.6.1.ebuild:
  Add missing eclass

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  08 May 2015; Kacper Kowalik <xarthisius@gentoo.org> -docker-1.5.0.ebuild:
  drop old wrt #548884

*docker-1.6.1 (08 May 2015)

  08 May 2015; Kacper Kowalik <xarthisius@gentoo.org> +docker-1.6.1.ebuild,
  -docker-1.6.0.ebuild:
  Version bump, drop old wrt #548884
