@@ -13,23 +13,23 @@ DIST docker-1.6.2.tar.gz 5714121 SHA256 f3a031b23ea9ff0fdbf3ffb9449c64ec51bb0534
 DIST docker-1.7.1.tar.gz 6853527 SHA256 9cd26415d68a88d3cf576e7e78c2fe97f42af795404f552728acc5b41dccf4ef SHA512 9b32c3deab77a27a4322a3ccbb3759a2c2a5627605090c4517c3754e6821407abcf5ffa227bad1fdafcbba068cdcaab586015dd8cfe9aed7e8a221d0615463f1 WHIRLPOOL 41b1afd8ea08c3452e5658d73e85c3b79a64f85fb4cb99c4c6a2ce1ab49836cebbe14724afe47898cb8d9bb9d4d69c64ff1c061895f3b9534150bc7ab50e2b22
 EBUILD docker-1.6.1.ebuild 6989 SHA256 c4ee05783aa758c88d04f446e41cce27ea966eb6ce4cf1f0eb58101c59fde242 SHA512 b2242d3e3b3a71b77faa6b7404f032d8b3e49262bb056471b10286780fd2deb8f3dce6def5cc3a9307f9a663260ada855fd01dfc1ea023f92041d118d72de790 WHIRLPOOL cc93426aac944d27c092942a440c3ae521c31b6d27688f9df903ca728c967714adf5d1805780301358c528f95901d25a47751ba713bd54b8c53a307c9479c574
 EBUILD docker-1.6.2.ebuild 6985 SHA256 45004bcf8d09923c3750df6f008b22622860718988552f2539389070c7863c12 SHA512 31852697327a7b77060c1ca7715c4c4271f262f42f96d9fc55dc6123432d5c740d058f9ce92d190f5fe2973d40d1ea77d5c53769a90a26c89356dba78832ca19 WHIRLPOOL c877065d68df776b65e16fa36e8eab5bf8d057bf5f07ffe2cf04b93384a21a43a4e4690fd03fafd9235a76757c82345412fefe2c0a3359025afba17636c4bb8d
-EBUILD docker-1.7.1.ebuild 7349 SHA256 463394782a221fb89d99b34fd51ad40bf68f3e7261f42c02f7daf99309c353cd SHA512 a4bede05d6d4d38ee5a41005020a90c3aae5d2c711c091fba544997c6abd8687ad3c3c57d268836a26edc5504746fc0ad7aa0f9a381194930207c000a4c8c489 WHIRLPOOL 82066942ffcaf7cea9cc85c99688d24088ab3ebee4880904e92e71c48a5f07f3098576fa0685474538ff4eec4f1c79d03921538ae93174c35b353fabf0d27219
-MISC ChangeLog 9089 SHA256 0d9d64d58babed26da88c260c5d38721ddadd920617b686b7d4d053bde3a7a2b SHA512 d593b17071b0271951228644b6b96ec40f064e39b6fd146ab28553947c99bcefe8e4ebd9d5937d58cd4ab593e4d903747c72b9f5f6df3f2a83c5a892a859f685 WHIRLPOOL 0d143ca1c8bb2bdc5122a472d05092edd431e7d8b402ae04ae730fa34573c4b0bba7306dde6b4a0b3b1cad2c643010f7b4482005ae30fe1caeaa5c1931b1a7b5
+EBUILD docker-1.7.1.ebuild 7322 SHA256 2c9de2d239d76d859c6a253c8eb9318d9d03647dd9c3475fc2c77ee7d3bb4277 SHA512 4ce9235d53a5a5806445174247f08a602ad649232108d19074f016a4d024bc237948dee58b359871adef9ae8a2e0c127e1b52c08c8545ff4f6832c1f54e87b2c WHIRLPOOL 9346bb351395de167eb5050bcef666c3f8f160362fd0943bad749134de4da2e8f3b466edbed85e5cb231730dbe4681b5738b553840de778ef1c653f20e3012a7
+MISC ChangeLog 9306 SHA256 32908691d15442c955f4c73124e4e2c714909db8af2ed7cd0cf10571843109df SHA512 4c7904dd06aa93bcf46196fba0fe0c84f91cc687e2ac6fff927ad8bafad61f6d7f7de53f5860e8c81f1a923cbe136a9033b405e3be670aa1ee8f80c3b3f51e8f WHIRLPOOL 72b1bd26c1997864f6ea88f2d38680e1e1f08b4cd28e2f5b0f407cd227f07f3a7076b19ff52b6e7c152d6b6c52750f95d4d2e580acbcbb87a41a7f11100c5764
 MISC metadata.xml 1795 SHA256 ed9ef64477285392cbb9b0e4b45b05441d5d55460b31899015770d2afdf64ae6 SHA512 b0d941f5d928fddd6290a1eff22012536c3718e66e371ea711365ee39f8a42e21f2e66ddefb5716e8cfafec018d9e3a277833af54f34933169096ae1ece5833c WHIRLPOOL 2d46322b68db72ea654df78494bf84c1df7fe41fefb269ac9a0357029f3bc670024ce33450c011d71881f2183cab802ac71d3be2988dbd8e741ce5b4ed5cb12e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVsoiNAAoJEF0huFKJUZL5Z2kP/3kpYBcilcIeGLm2p7kmuUZE
-SNbYJ0kwTwh4RPa06FCfptoGdPa3eu3VHk9yUcknRTgB19dmvdifNZQeBxxjRPRn
-eI62R2lpS+ZdF9qkSnVt7W9k8yAU9uYwVwHzzdd95BaEF3tCfWOobGlaPCawJCr7
-S0/Nf9CapxR1JOaiINZsV28D1/b87lVXD4L7TWOb8hMm7u/bHjJ3Sy2JBECMNstf
-1DZQp/KSsWDAkwRf5h3t6g4O5vPR+PkiXp4buziwH89QRwu8YTGTbBpvo7hw2G6s
-B80uHGpA2fL/8PLN5Wy6WT0sijhQ9PMmmA3mhD1PHX2Y8On6l97FAIK8zzIp8lnl
-sOQZwqdjNKrBYv+c5IWBiwYa0bxxmsRZPD1+a/PPwg8hsU2ASFMgvR4r0fldtHhb
-oOQ03pd7XroZsGIS/K6LSlVGNRIAmt4q4KkdABXdFGWtmSby63ioWzzht3C0cy1T
-cAsZjpyd7swZMZUaL6dN9gNwlfJ44E4LPCWRYOoMF/SnQgOP4ihdhb7pbQ6aCza/
-w3OsusD4ZHXEsaT/GkILbI7YxOLkBpgCClzxixk8VyO5MgoKnfq6GS9OYTHHmhmj
-I5RpCYBC9vng64bf68iuLUJW9k0fKiNKei/gdvyJD3vbwmzXxwJPwRQbcRHxfVLL
-F/ZMeBj4ggak8dkluIbu
-=d2Sq
+iQIcBAEBCAAGBQJVt4o5AAoJEF0huFKJUZL5aEoP/2gF29U7qwJpFhO8DJ84Po88
+ROizx6As1h8lq4fABSKudRLngH1SgI08dVnvU1NV7+acg1HuQsJ7lJxK4vwgWLn4
++AnDklxzDxOZNKmDPCBzUQr37Z8k8FwNZ+doVBzWeZa8dC5kN2Hzz2kWy40CLNgR
+K41vD6Cdr+s2rPq23b5hnqvN0TWNgeEpFjYkJk+a5lYnlJRcMVsbRK7Ow3/TwC92
+LydeL+ybYpnq7BS+eX5KnqcJkj7WGlAfHs0znjT532dFPm78ga+pbf3tlDiYYbPS
+Vdj973W4Xd8TBQ/KHv+eY5efUyEYKPLmH32UFjVJipvtaaaIE+vKTjl+4zEsha5K
+gUZrssjS99CYeEnyPtwhjBf09FxNtiOYbFSiTuOhDzJXFCqe7G9iuOUQbyxkBtZf
+ytYwwv97dnvJHy7SKSrsGu3DRehol/QLwq0PD+QvVXfJZtkQIU9WufvJKq1n3CvU
+4byv74jcmjuE0Q2xGyySqlH43VrcVlC1exZwATBshnd7C2h6SAH/lagsHo3PtKSn
+m/B698B7OKVEl58OhEOyxGk4AgnAhCHN241k+Lz6czquPVWWw5ZQ9rBjus8ObXKn
+sHZGOaLb61GQHWMNXH9IDdTEzzoRCIJQoE8gGzFqNfnBou382dIko9Kk4ebtUsO4
+G9NyXBicWhl5STD6YgGS
+=R6HG
 -----END PGP SIGNATURE-----
