@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/docker
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/ChangeLog,v 1.55 2015/07/24 18:48:39 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/ChangeLog,v 1.56 2015/07/28 13:57:07 xarthisius Exp $
+
+  28 Jul 2015; Kacper Kowalik <xarthisius@gentoo.org> docker-1.7.1.ebuild:
+  Make kernel chchecks non fatal. Thanks to Tianon <admwiggin@gmail.com> for the
+  patch. Fixes #555434 by Deniss Gaplevsky  <slim@inbox.lv>
 
 *docker-1.7.1 (24 Jul 2015)
 
